http:// references changed to //

--- a/demo/HTMLCSS14-14-embeds/index.html
+++ b/demo/HTMLCSS14-14-embeds/index.html
@@ -19,12 +19,12 @@
   
     <h2>Audio</h2>
     <audio controls>
-      <source src="http://www.tonycuffe.com/mp3/tail%20toddle.mp3">   
+      <source src="//www.tonycuffe.com/mp3/tail%20toddle.mp3">   
     </audio>
     
     <h2>Video</h2>
     <video controls autoplay>
-      <source src="http://cdn.clipcanvas.com/sample/clipcanvas_14348_H264_320x180.mp4"></source>
+      <source src="//cdn.clipcanvas.com/sample/clipcanvas_14348_H264_320x180.mp4"></source>
     </video>
     
   
