--- a/demo/HTMLCSS14-4-textual-tags/index.html
+++ b/demo/HTMLCSS14-4-textual-tags/index.html
@@ -42,7 +42,7 @@
     <strong>Some text which is bold</strong> and I am not bold
     
     <!-- <a> Anchor -->
-    <a href="http://www.ilovecoding.org">iLoveCoding</a>
+    <a href="//ilovecoding.org">iLoveCoding</a>
     <a href="contact.html">Contact</a>
     <a href="more/about.html">about</a>
     
