--- a/demo/htmlcss2/24-semantic-element-hw/about.html
+++ b/demo/htmlcss2/24-semantic-element-hw/about.html
@@ -24,7 +24,7 @@
         Currently I am running my own company full-time, <a href="https://ilovecoding.org">iLoveCoding.org</a>
       </li>
       <li>
-        On my quest I have learned a lot of life and business lessons that I share <a href="http://azizali.com/blog/">here</a>
+        On my quest I have learned a lot of life and business lessons that I share <a href="//azizali.com/blog/">here</a>
       </li>
       <li>
         I enjoy learning, programming, usable design, sales copywriting and physical fitness
