--- a/demo/htmlcss2/24-semantic-element-hw/index.html
+++ b/demo/htmlcss2/24-semantic-element-hw/index.html
@@ -26,7 +26,7 @@
       <a href="about.html">Click here to read more</a>
       
       By the way, here is my 
-      <a href="http://azizali.com"> 
+      <a href="//azizali.com"> 
         personal website / blog (http://azizali.com)
       </a>
     </div>
