--- a/demo/htmlcss2/59-additional-pages/about.html
+++ b/demo/htmlcss2/59-additional-pages/about.html
@@ -32,7 +32,7 @@
         <h3>Useful Links</h3>
         <ul>
           <li>
-            <a href="http://azizali.com">AzizAli.com</a>
+            <a href="//azizali.com">AzizAli.com</a>
           </li>
           <li>
             <a href="https://ilovecoding.org">iLoveCoding.org</a>
