--- a/demo/htmlcss2/67-iframe/index.html
+++ b/demo/htmlcss2/67-iframe/index.html
@@ -7,6 +7,6 @@
   <title>iframe</title>
 </head>
 <body>
-  <iframe width="500px" height="500px" src="http://yahoo.com" frameborder="1"></iframe>
+  <iframe width="500px" height="500px" src="//yahoo.com" frameborder="1"></iframe>
 </body>
 </html>
