--- a/demo/htmlcss2/68-form/index.html
+++ b/demo/htmlcss2/68-form/index.html
@@ -7,7 +7,7 @@
   <title>Form</title>
 </head>
 <body>
-  <form action="http://yourwebsiteblabla.com/formsubmission">
+  <form action="//yourwebsiteblabla.com/formsubmission">
     <label for="user">Username:</label>
     <input name="username" type="text" placeholder="Please enter info here"
      value="azizali" id="user">
