--- a/demo/jQuery14-7-1-projectTopBar/index.html
+++ b/demo/jQuery14-7-1-projectTopBar/index.html
@@ -11,7 +11,7 @@
   <div class="topbar-wrap">
     <div class="topbar topbar-bar">
       <span>This is some text that i want here</span>
-      <a class="promolink"href="http://ilovecoding.org">Click here</a>
+      <a class="promolink"href="//ilovecoding.org">Click here</a>
       <a class="closelink" href="#">X</a>      
     </div>
     <div class="topbar topbar-lever"><a href="#">Pull</a></div>
