--- a/demo/HTMLCSS14-9-cssLayout-2/index.html
+++ b/demo/HTMLCSS14-9-cssLayout-2/index.html
@@ -24,9 +24,9 @@
       </main>
 
       <aside>
-        <a href="http://google.com">Google</a>
+        <a href="//google.com">Google</a>
         <br>
-        <a href="http://yahoo.com">Yahoo</a>
+        <a href="//yahoo.com">Yahoo</a>
       </aside>
     </content>
 
