--- a/demo/bootstrap-8-wrapUp/index.html
+++ b/demo/bootstrap-8-wrapUp/index.html
@@ -18,12 +18,12 @@
         <div class="row">
           <div class="col-xs-6">
             <a href="#" class="thumbnail">
-            <img src="http://www.medicalnewstoday.com/content/categories/psychology-psychiatry/thumbs/image3.jpg" alt="...">
+            <img src="//www.medicalnewstoday.com/content/categories/psychology-psychiatry/thumbs/image3.jpg" alt="...">
             </a>
           </div>
           <div class="col-xs-6">
             <a href="#" class="thumbnail">
-            <img src="http://www.medicalnewstoday.com/content/categories/psychology-psychiatry/thumbs/image3.jpg" alt="...">
+            <img src="//www.medicalnewstoday.com/content/categories/psychology-psychiatry/thumbs/image3.jpg" alt="...">
             </a>
           </div>
         </div>
