--- a/demo/fullCoverBackgroundImage/1.html
+++ b/demo/fullCoverBackgroundImage/1.html
@@ -2,7 +2,7 @@
   <meta charset="UTF-8">
   <title>Full Screen Background Cover Image</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link href="http://fonts.googleapis.com/css?family=Lily+Script+One|Roboto:900,400,300" rel="stylesheet" type="text/css">
+  <link href="//fonts.googleapis.com/css?family=Lily+Script+One|Roboto:900,400,300" rel="stylesheet" type="text/css">
   <link rel="stylesheet" href="css/style1.css">
 </head>
 <body>
