--- a/demo/mediaQueryPractice/index.html
+++ b/demo/mediaQueryPractice/index.html
@@ -54,7 +54,7 @@
             <li>
               <a href="https://ilovecoding.org">iLoveCoding</a>
             </li>
-            <li><a href="http://JStackDeveloper.org">JStack Developer</a></li>
+            <li><a href="//JStackDeveloper.org">JStack Developer</a></li>
           </ul>
         </div>
 
