--- a/demo/selectors/index.html
+++ b/demo/selectors/index.html
@@ -18,8 +18,8 @@
 
     <aside id="main">
       <ul>
-        <li class="specialLi"><a href="http://google.com">First link</a></li>
-        <li><a href="http://yahoo.com">Second link</a></li>
+        <li class="specialLi"><a href="//google.com">First link</a></li>
+        <li><a href="//yahoo.com">Second link</a></li>
       </ul>      
     </aside>
 
